--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">nippohub_daily</string>
+    <string-array name="settings">
+        <item>利用規約</item>
+        <item>プライバシーポリシー</item>
+        <item>サインアウト</item>
+    </string-array>
 </resources>
