--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">nippohub_daily</string>
+    <string name="back">戻る</string>
     <string-array name="settings">
         <item>利用規約</item>
         <item>プライバシーポリシー</item>
