--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">nippohub_daily</string>
     <string name="back">戻る</string>
     <string name="newDailyReport">新規作成</string>
+    <string name="editDailyReport">編集</string>
     <string name="setting">設定</string>
     <string name="dummyDailyReportTitle">20xx-xx-xx 今日はいい日だった</string>
     <string-array name="settings">
