--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,10 @@
     <string name="back">戻る</string>
     <string name="newDailyReport">新規作成</string>
     <string name="editDailyReport">編集</string>
+    <string name="dailyReportDate">日付</string>
+    <string name="dailyReportTitle">タイトル</string>
+    <string name="dailyReportContent">内容</string>
+    <string name="update">更新</string>
     <string name="setting">設定</string>
     <string name="dummyDailyReportTitle">20xx-xx-xx 今日はいい日だった</string>
     <string-array name="settings">
