--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,8 +11,13 @@
     <string name="setting">設定</string>
     <string name="userEmail">メールアドレス</string>
     <string name="userPassword">パスワード</string>
+    <string name="userPasswordConfirmation">パスワードの確認</string>
     <string name="signIn">サインイン</string>
+    <string name="signUp">サインアップ</string>
     <string name="toSignUp">登録する</string>
+    <string name="privacy">プライバシーポリシー</string>
+    <string name="agreements">利用規約</string>
+    <string name="signUpNotion">サインアップすると利用規約とプライバシーポリシーに同意したことになります。</string>
     <string name="dummyDailyReportTitle">20xx-xx-xx 今日はいい日だった</string>
     <string-array name="settings">
         <item>利用規約</item>
