--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,25 +1,25 @@
 <resources>
     <string name="app_name">NippoHub</string>
     <string name="back">戻る</string>
-    <string name="newDailyReport">新規作成</string>
-    <string name="editDailyReport">編集</string>
-    <string name="dailyReportDate">日付</string>
-    <string name="dailyReportTitle">タイトル</string>
-    <string name="dailyReportContent">内容</string>
+    <string name="new_daily_report">新規作成</string>
+    <string name="edit_daily_report">編集</string>
+    <string name="daily_report_date">日付</string>
+    <string name="daily_report_title">タイトル</string>
+    <string name="daily_report_content">内容</string>
     <string name="create">作成</string>
     <string name="update">更新</string>
     <string name="setting">設定</string>
-    <string name="userEmail">メールアドレス</string>
-    <string name="userPassword">パスワード</string>
-    <string name="userPasswordConfirmation">パスワードの確認</string>
-    <string name="signIn">サインイン</string>
-    <string name="signUp">サインアップ</string>
-    <string name="toSignUp">登録する</string>
+    <string name="user_email">メールアドレス</string>
+    <string name="user_password">パスワード</string>
+    <string name="user_password_confirmation">パスワードの確認</string>
+    <string name="sign_in">サインイン</string>
+    <string name="sign_up">サインアップ</string>
+    <string name="to_sign_up">登録する</string>
     <string name="privacy">プライバシーポリシー</string>
     <string name="agreements">利用規約</string>
-    <string name="signUpNotion">サインアップすると利用規約とプライバシーポリシーに同意したことになります。</string>
-    <string name="dummyDailyReportTitle">20xx-xx-xx 今日はいい日だった</string>
-    <string name="dailyReportTitleWithDate">%s %s</string>
+    <string name="sign_up_notion">サインアップすると利用規約とプライバシーポリシーに同意したことになります。</string>
+    <string name="daily_report_title_sample">20xx-xx-xx 今日はいい日だった</string>
+    <string name="daily_report_list_title">%s %s</string>
     <string name="dialog_ok">OK</string>
     <string name="dialog_title_auth_error">認証エラー</string>
     <string name="dialog_message_wrong_password">パスワードが違います。</string>
